--- a/svg-gallery/package.json
+++ b/svg-gallery/package.json
@@ -14,6 +14,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.0",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
@@ -26,6 +27,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.32",
+    "sass": "^1.69.5",
     "tailwindcss": "^3.3.7",
     "vite": "^4.3.9"
   }
