--- a/svg-gallery/package.json
+++ b/svg-gallery/package.json
@@ -10,14 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^40.2.0",
+    "@ckeditor/ckeditor5-react": "^6.2.0",
     "@emotion/react": "^11.11.1",
-    "@fontsource/metropolis": "^5.0.7",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/metropolis": "^5.0.7",
     "@mui/icons-material": "^5.15.1",
     "@mui/material": "^5.15.1",
     "@mui/styled-engine-sc": "^6.0.0-alpha.9",
     "react": "^18.2.0",
+    "react-avatar-editor": "^13.0.2",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.21.0",
     "styled-components": "^6.1.1",
     "swiper": "^11.0.5"
