--- a/svg-gallery/package.json
+++ b/svg-gallery/package.json
@@ -22,6 +22,7 @@
     "react-avatar-editor": "^13.0.2",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-image-crop": "^11.0.4",
     "react-router-dom": "^6.21.0",
     "styled-components": "^6.1.1",
     "swiper": "^11.0.5"
